<resources>
    <string name="app_name">Strength Calculator</string>
    <string name="edit_stats">Edit Stats</string>
    <string name="calculate">Calculate</string>
    <string name="bodyweight_lbs">Bodyweight(lbs)</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="your_estimated_one_rep_max_is_lbs">Please enter an exercise, weight, and reps</string>
    <string name="nullConnection">Null Connection</string>
    <string name="OnerepmaxTooLowText">You are stronger than 0% of lifters in your age and weight group</string>
    <string name="userRepMaxTooHigh">You are stronger than 100% of lifters in your age and weight group</string>
    <integer name="userAge">5</integer>
    <string-array name="ageChoices">
        <item>14 – 17</item>
        <item>18 – 23</item>
        <item>24 – 39</item>
        <item>40 – 49</item>
        <item>50 – 59</item>
        <item>60 – 69</item>
        <item>70 – 79</item>
        <item>80 – 89</item>
    </string-array>
</resources>

