<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profilePage">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/constraintLayout3"
      android:layout_width="277dp"
      android:layout_height="445dp"
      android:layout_marginStart="45dp"
      android:layout_marginTop="90dp"
      android:layout_marginEnd="45dp"
      android:layout_marginBottom="196dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="225dp"
        android:layout_height="130dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

      <EditText
          android:id="@+id/bodyweight"
          android:layout_width="130dp"
          android:layout_height="48dp"
          android:layout_marginStart="48dp"
          android:layout_marginEnd="48dp"
          android:layout_marginBottom="28dp"
          android:background="@drawable/roundedcorners"
          android:ems="10"
          android:inputType="number"
          android:textAlignment="center"
          android:textColorHint="@color/black"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="1.0"
          app:layout_constraintStart_toStartOf="parent"
          tools:ignore="SpeakableTextPresentCheck" />

      <TextView
          android:id="@+id/bodyweightLabel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="75dp"
          android:layout_marginTop="24dp"
          android:layout_marginEnd="76dp"
          android:scaleX="1.25"
          android:scaleY="1.25"
          android:text="@string/bodyweight_lbs"
          android:textColor="@android:color/white"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="225dp"
        android:layout_height="130dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

      <TextView
          android:id="@+id/ageLabel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="75dp"
          android:layout_marginTop="24dp"
          android:layout_marginEnd="76dp"
          android:scaleX="1.25"
          android:scaleY="1.25"
          android:text="@string/age"
          android:textColor="@android:color/white"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.51"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <Spinner
          android:id="@+id/age"
          android:layout_width="130dp"
          android:layout_height="48dp"
          android:layout_marginStart="48dp"
          android:layout_marginEnd="48dp"
          android:layout_marginBottom="28dp"
          android:background="@drawable/roundedcorners"
          android:textAlignment="center"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="225dp"
        android:layout_height="130dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

      <TextView
          android:id="@+id/genderLabel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="75dp"
          android:layout_marginTop="24dp"
          android:layout_marginEnd="76dp"
          android:scaleX="1.25"
          android:scaleY="1.25"
          android:text="@string/gender"
          android:textColor="@android:color/white"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.517"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <Spinner
          android:id="@+id/gender"
          android:layout_width="130dp"
          android:layout_height="48dp"
          android:layout_marginStart="48dp"
          android:layout_marginEnd="48dp"
          android:layout_marginBottom="28dp"
          android:background="@drawable/roundedcorners"
          android:textAlignment="center"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

  <Button
      android:id="@+id/saveProfile"
      android:layout_width="350dp"
      android:layout_height="61dp"
      android:layout_marginStart="30dp"
      android:layout_marginTop="99dp"
      android:layout_marginEnd="31dp"
      android:layout_marginBottom="37dp"
      android:text="@string/save"
      android:onClick="saveProfile"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>