<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonEditStats"
        android:layout_width="165dp"
        android:layout_height="81dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="editProfile"
        android:text="@string/edit_stats"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCalc"
        android:layout_width="165dp"
        android:layout_height="81dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="calculate"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="343dp"
        android:layout_height="535dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEditStats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/input"
            android:layout_width="342dp"
            android:layout_height="255dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/secondaryroundedcorners"
            app:layout_constraintBottom_toTopOf="@+id/strongerThanContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Spinner
                android:id="@+id/exercise"
                android:layout_width="260dp"
                android:layout_height="48dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="37dp"
                android:layout_marginBottom="146dp"
                android:background="@drawable/roundedcorners"
                android:scaleX="1.25"
                android:scaleY="1.25"
                android:textColor="@android:color/white"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exerciseLabel" />

            <TextView
                android:id="@+id/exerciseLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="76dp"
                android:layout_marginBottom="11dp"
                android:scaleX="1.25"
                android:scaleY="1.25"
                android:text="Exercise"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toTopOf="@+id/exercise"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="161dp"
                android:layout_height="109dp"
                android:layout_marginStart="2dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <EditText
                    android:id="@+id/exerciseWeightInput"
                    android:layout_width="130dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/roundedcorners"
                    android:ems="10"
                    android:inputType="number"
                    android:onClick="clearLiftWeightInput"
                    android:textAlignment="center"
                    android:textColorHint="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/exerciseWeightLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="59dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="58dp"
                    android:layout_marginBottom="11dp"
                    android:scaleX="1.25"
                    android:scaleY="1.25"
                    android:text="Weight"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/exerciseWeightInput"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="161dp"
                android:layout_height="109dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <EditText
                    android:id="@+id/repsInput"
                    android:layout_width="130dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="14dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/roundedcorners"
                    android:ems="10"
                    android:inputType="number"
                    android:onClick="clearRepsInput"
                    android:textAlignment="center"
                    android:textColorHint="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/repsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="58dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="59dp"
                    android:layout_marginBottom="11dp"
                    android:scaleX="1.25"
                    android:scaleY="1.25"
                    android:text="Reps"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/repsInput"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/strongerThanContainer"
            android:layout_width="342dp"
            android:layout_height="140dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/secondaryroundedcorners"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/repMaxContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input"
            tools:visibility="visible">

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/roundedcorners"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/strongerThan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="65dp"
                android:layout_marginBottom="11dp"
                android:scaleX="1.25"
                android:scaleY="1.25"
                android:text="You are stronger than % of lifters \n in your age and weight group"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/progressBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.522" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/repMaxContainer"
            android:layout_width="342dp"
            android:layout_height="60dp"
            android:layout_marginEnd="1dp"
            android:background="@drawable/secondaryroundedcorners"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/strongerThanContainer"
            tools:visibility="visible">

            <TextView
                android:id="@+id/repMaxStatement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="63dp"
                android:layout_marginBottom="20dp"
                android:scaleX="1.25"
                android:scaleY="1.25"
                android:text="@string/your_estimated_one_rep_max_is_lbs"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>